[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.7", default-features = false, features = ["std", "derive"] }
env_logger = { version = "0.10.0", default-features = false, features = ["humantime"] }
futures = "0.3.30"
log = "0.4.20"
packet = "0.1.4"
priority-queue = "1.3.2"
rustls = "0.21.8"
rustls-pemfile = "1.0.3"
sha2 = "0.10.8"
smoltcp = "0.10.0"
spin = { version = "0.9.8", default-features = false, features = ["spin_mutex"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
tokio-rustls = "0.24.1"
tokio-util = "0.7.10"
tun = { version = "0.6.1", features = ["async"] }
tun-tap = "0.1.4"
