[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.12", default-features = false, features = ["std", "derive"] }
env_logger = { version = "0.10.1", default-features = false, features = ["humantime"] }
futures = { version = "0.3.30", default-features = false }
log = "0.4.20"
rustls = "0.22.1"
rustls-pemfile = "2.0.0"
sha2 = "0.10.8"
smoltcp = { version = "0.11.0", default-features = false, features = ["std", "alloc", "medium-ip", "proto-ipv4", "proto-ipv6", "socket", "socket-tcp", "socket-udp"] }
spin = { version = "0.9.8", default-features = false, features = ["mutex", "spin_mutex"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "io-util"] }
tokio-rustls = { version = "0.25.0", default-features = false }
tokio-util = "0.7.10"
tun = { version = "0.6.1", features = ["async"] }
tun-tap = { version = "0.1.4", default-features = false }
